data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3103.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8b\80\80\80\00\01\02\6a\73\04\66\75"
    "\6e\63\00\00\03\82\80\80\80\00\01\00\07\96\80\80"
    "\80\00\01\12\6e\65\73\74\65\64\5f\72\65\74\75\72"
    "\6e\5f\74\65\73\74\00\01\0a\90\80\80\80\00\01\8a"
    "\80\80\80\00\00\10\00\02\40\10\00\0f\0b\0b"
  )
""
)